# quadruped_robot_ctrl

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
docs/hardware/: README.md
docs/mechanism/: README.md  single_leg_mechanism_kinematics.docx
src/common/: stage_manifest.hpp
src/control/motor/: single_motor_controller.cpp  single_motor_controller.hpp
src/model/drive_unit/: config_loader.cpp  config_loader.hpp  drive_unit_types.hpp  parallel_drive_unit.cpp  parallel_drive_unit.hpp
src/model/motor/: motor_types.hpp
src/platform/phyarc/: README.md  board_client.cpp  board_client.hpp  motor_driver.cpp  motor_driver.hpp
src/runtime/: README.md  config_loader.cpp  config_loader.hpp  telemetry_monitor.cpp  telemetry_monitor.hpp
src/safety/: safety_manager.cpp  safety_manager.hpp
stages/stage1_single_motor/: README.md  reference_mapping.md
stages/stage1_single_motor/app/: cli_app.cpp  cli_app.hpp  main.cpp
stages/stage1_single_motor/config/: default.yaml
stages/stage1_single_motor/tests/: README.md
stages/stage2_parallel_drive_unit/: README.md
stages/stage2_parallel_drive_unit/app/: main.cpp
stages/stage2_parallel_drive_unit/config/: default.yaml
stages/stage2_parallel_drive_unit/tests/: README.md
stages/stage3_single_leg/: README.md
stages/stage3_single_leg/app/: main.cpp
stages/stage3_single_leg/config/: default.yaml
stages/stage3_single_leg/tests/: README.md
stages/stage4_quadruped/: README.md
stages/stage4_quadruped/app/: main.cpp
stages/stage4_quadruped/config/: default.yaml
stages/stage4_quadruped/tests/: README.md
tools/: README.md
